<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Profile Image with Edit Button -->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user_profile"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:civ_border_width="2dp"
                app:civ_border_color="@android:color/white"
                android:contentDescription="@string/p_pic"/>


            <Button
                android:id="@+id/editImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_image"
                android:layout_marginTop="8dp"/>

            <!-- EditText Fields for Information -->
            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/p_number"
                android:inputType="phone"
                android:minHeight="48dp" />

            <!-- Gender (Radio Buttons) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="16dp"/>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:padding="16dp"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:padding="16dp"/>

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:padding="16dp"/>
            </RadioGroup>

            <!-- Hobbies (Checkboxes) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies"
                android:layout_marginTop="16dp"/>

            <CheckBox
                android:id="@+id/cbReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                android:minHeight="48dp"/>

            <CheckBox
                android:id="@+id/cbTraveling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traveling"
                android:minHeight="48dp"/>

            <CheckBox
                android:id="@+id/cbGaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaming"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>